Fixes style issues in the footer move icon and the connection indicator on mobile devices

--- a/src/app/footer/footer-bar/footer-bar.component.scss
+++ b/src/app/footer/footer-bar/footer-bar.component.scss
@@ -12,9 +12,10 @@
 #footer-move-left,
 #footer-move-right {
   width: 50px;
+  height: 50px;
   top: 0;
   color: #fff;
-  font-size: 2rem;
+  font-size: 3rem;
   z-index: 1050;
 }
 
