--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,12 @@ body {
 }
 
 * {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+
   outline: none !important;
 }
 
